# pr-collector

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/sphinx/: api.rst  conf.py  index.rst  installation.rst  usage.rst
src/pr_collector/: __init__.py  app.py  cli.py  config.py
tests/: __init__.py  test_app.py
